---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Update the radar icon
    - Decide on a circuit connector
    - Setup thumbnail
    - Write readme
    - Draw the data cable on the interface (under the circuit connector)
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 12. 02
  Info:
    - Switch to player placeable entities
    - Rebrand as undersea data cable
    - Setup hidden surface i plan to reuse
    - Try and fail with custom worldgen
    - Why do i keep trying what keeps failing
    - Abandon the idea of non labtile surfaces (i just do not understand them)
    - Deploy the first instance of new surfacedata tracking code
    - Test surface.set_tiles
    - Hide quality indicator (why would you even build them with quality?)
    - Floor the heat pipe position to a tile position
    - Force the chunks to generate and _then_ call set_tile
    - Run a bunch of surface tile setting tests
    - Stash thinksies
    - Stash overnight draft
    - Test the undo functions
    - Test redo when visiting the hidden surface
    - Mention when switching the active surface
    - Document player surface visiting side effects
    - Switch between concrete and out-of-map
    - Use the ugly heat interface sprite for the connector
    - Give the radar a texture and translation
    - Rename connector to interface and place it
    - Move both entities and their items/recipes to their own files
    - Fix interface blueprinting
    - Allow the interface to float on the fluid
    - Draft the initial network recalculation code
    - Now why on earth does get_connected_tiles fail
    - Welp get_connected_tiles looks broken too
    - Fix surfacedata -> storage typo
    - Deploy deathrattles to clear up the tiles and networks
    - Move add/sub ing single tiles to specialized functions